improve relicdata-keyword notebook with xlsxwriter for formatting

--- a/relicdata-keyword.ipynb
+++ b/relicdata-keyword.ipynb
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "69e7f802-4bbc-4926-9f1e-5cfd752223ea",
    "metadata": {},
    "outputs": [],
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "a6a93954-77b6-4c86-aff3-f95321c8476f",
    "metadata": {},
    "outputs": [
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "23fe70e3-b3a5-4487-af9c-4c4d396e55ae",
    "metadata": {},
    "outputs": [
@@ -1108,31 +1108,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "159fcad9-a404-4794-90b8-02311750bb2e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "ofile = f'./keyword/용어작업파일-{filename_suffix()}.xlsx'\n",
+    "\n",
+    "# index from 1 instead of 0\n",
     "odf = odf.reset_index(drop=True) \n",
     "odf.index += 1 \n",
-    "odf.to_excel(f'./keyword/용어작업-{filename_suffix()}.xlsx', index=True, index_label='식별번호', sheet_name='용어작업')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "2ca8f33c-7b1d-4fed-9a84-75db7b754c73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ldf = ldf.reset_index(drop=True) \n",
     "ldf.index += 1 \n",
-    "ldf.to_excel(f'./keyword/용어사용-{filename_suffix()}.xlsx', index=True, index_label='식별번호', sheet_name='용어사용')"
+    "\n",
+    "with pd.ExcelWriter(ofile, engine='xlsxwriter') as writer:\n",
+    "\n",
+    "    workbook = writer.book\n",
+    "    sheet1 = workbook.add_worksheet('용어작업')\n",
+    "    sheet2 = workbook.add_worksheet('용어사용')\n",
+    "    \n",
+    "    \n",
+    "    # Write DataFrame to Excel\n",
+    "    odf.to_excel(writer, sheet_name='용어작업', index=True, header=False, startrow=1) \n",
+    "    ldf.to_excel(writer, sheet_name='용어사용', index=True, header=False, startrow=1) \n",
+    "    \n",
+    "    # Set heaer formats\n",
+    "    header_format = workbook.add_format({\n",
+    "        'bold': True,\n",
+    "        'bg_color': '#D9EDF7',  # Light blue background\n",
+    "        'border': 1,\n",
+    "        'align': 'center',\n",
+    "    })\n",
+    "    \n",
+    "    # Set column widths and formats\n",
+    "    num_format = workbook.add_format({'num_format': '0', 'border':1, 'align': 'center'})\n",
+    "    text_wrap = workbook.add_format({'text_wrap': True, 'border':1, 'align':'left'})\n",
+    "    \n",
+    "    \n",
+    "    for sheet, df in ((sheet1, odf), (sheet2, ldf)): \n",
+    "        sheet.write_row(0, 0, ['식별번호'] + list(df.columns), header_format)\n",
+    "    \n",
+    "        # Set row height (optional)\n",
+    "        sheet.set_row(0, 25)  # Set height of the first row to 25 points\n",
+    "        # Set cell format \n",
+    "        sheet.set_column('A:A', 10, cell_format=num_format) \n",
+    "        sheet.set_column('C:C', 10, cell_format=num_format) \n",
+    "        sheet.set_column('B:B',68, cell_format=text_wrap) \n",
+    "        sheet.set_column('D:E',68, cell_format=text_wrap) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "7fe38f94-66ac-42bc-84f3-c65eae4e74ed",
    "metadata": {},
    "outputs": [
@@ -1140,7 +1167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done, eplapsed seconds = 82.73450374603271\n"
+      "Done, eplapsed seconds = 15.882540702819824\n"
      ]
     }
    ],
