no border for data cell

--- a/relicdata-keyword.ipynb
+++ b/relicdata-keyword.ipynb
@@ -1141,8 +1141,8 @@
     "    })\n",
     "    \n",
     "    # Set column widths and formats\n",
-    "    num_format = workbook.add_format({'num_format': '0', 'border':1, 'align': 'center'})\n",
-    "    text_wrap = workbook.add_format({'text_wrap': True, 'border':1, 'align':'left'})\n",
+    "    num_format = workbook.add_format({'num_format': '0', 'align': 'center'})\n",
+    "    text_wrap = workbook.add_format({'text_wrap': True, 'align':'left'})\n",
     "    \n",
     "    \n",
     "    for sheet, df in ((sheet1, odf), (sheet2, ldf)): \n",
@@ -1167,7 +1167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done, eplapsed seconds = 15.882540702819824\n"
+      "Done, eplapsed seconds = 16.066461086273193\n"
      ]
     }
    ],
